Bug 1636273. Fix calculation of scroll position in AsyncPanZoomController::HandleDragEvent. r=kats,botond

The scroll position and scrollable rect are inside the zoom boundary so we need to use the composisted size inside the zoom boundary as well.

Differential Revision: https://phabricator.services.mozilla.com/D76089