gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -1088,10 +1088,8 @@ nsEventStatus AsyncPanZoomController::HandleDragEvent(
       GetAxisStart(direction, Metrics().GetScrollableRect().TopLeft());
   CSSCoord maxScrollPosition =
       GetAxisStart(direction, Metrics().GetScrollableRect().BottomRight()) -
-      GetAxisLength(
-          direction,
-          Metrics()
-              .CalculateCompositionBoundsInCssPixelsOfSurroundingContent());
+      GetAxisLength(direction,
+                    Metrics().CalculateCompositedSizeInCssPixels());
   CSSCoord scrollPosition =
       minScrollPosition +
       (scrollPercent * (maxScrollPosition - minScrollPosition));
